[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Enemies/MMDG-12.png.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemies_Fazzi/Enemy_5.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.4956, 15.3551 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18.4426, 17.9059 )

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 18.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6, 7.5, 9.5, 11.5, 13, 16, 18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 28.3462, -18.998 ), Vector2( 64.9271, 13.1292 ), Vector2( 102.443, -17.6479 ), Vector2( 50.9999, 19.1663 ), Vector2( 12.75, 4.79158 ), Vector2( -23.1379, -22.3149 ), Vector2( -68.9436, -1.23965 ), Vector2( -97.5382, -35.7778 ), Vector2( -20.527, 19.5448 ), Vector2( -0.208115, 0.0817612 ) ]
}

[node name="Enemy_5_Root" type="Node2D"]
scale = Vector2( 3, 3 )

[node name="Enemy_5_KinematicBody" type="KinematicBody2D" parent="."]
scale = Vector2( 0.7, 0.7 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Enemy_5_Sprite" type="Sprite" parent="Enemy_5_KinematicBody"]
scale = Vector2( 0.49, 0.49 )
texture = ExtResource( 1 )

[node name="Enemy_5_Col_Body" type="CollisionShape2D" parent="Enemy_5_KinematicBody"]
shape = SubResource( 1 )

[node name="Enemy_5_Hit" type="Area2D" parent="Enemy_5_KinematicBody"]
collision_layer = 2
collision_mask = 4

[node name="Enemy_5_Col_Hit" type="CollisionShape2D" parent="Enemy_5_KinematicBody/Enemy_5_Hit"]
shape = SubResource( 2 )

[node name="Enemy_5_Animation_Move" type="AnimationPlayer" parent="Enemy_5_KinematicBody"]
anims/move = SubResource( 3 )

[node name="Enemy_5_Visibility" type="VisibilityNotifier2D" parent="Enemy_5_KinematicBody"]
scale = Vector2( 1.87713, 1.95068 )
[connection signal="area_entered" from="Enemy_5_KinematicBody/Enemy_5_Hit" to="Enemy_5_KinematicBody" method="_on_Enemy_5_Hit_area_entered"]
[connection signal="animation_finished" from="Enemy_5_KinematicBody/Enemy_5_Animation_Move" to="Enemy_5_KinematicBody" method="_on_Enemy_5_Animation_Move_animation_finished"]
